phpMyFAQ 2.7.6
Codename "Prospero"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.7.6 - 2012-05-
- updated Dutch translation
- updated Russian translation
- fixed some bugs (Thorsten)

Version 2.7.5 - 2012-04-14
- fixed serious security issue in bundled ImageManager library (Thorsten)
- full support for Microsoft SQL Server Driver for PHP (Thorsten)
- added online verification check (Thorsten, Florian)
- added experimental support for SQLite3 (Thorsten)
- updated Spanish translation (Reynaldo Martinez P.)
- fixed Slovak translation (Thorsten)
- fixed IE9 related JavaScript issues (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.4 - 2012-02-22
- added PDF export for complete FAQ in frontend (Thorsten)
- updated Japanese translation
- updated Russian translation (Alexander Melnik)
- updated Spanish translation
- fixed backup issue (Thorsten)
- fixed some bugs (Alexander Melnik, Thorsten, Aco Mitevski)

Version 2.7.3 - 2012-01-16
- improved PDF export (Thorsten)
- updated Dutch translation (Almar van Pel)
- fixed some PostgreSQL related issues (Vince, Thorsten)
- fixed some attachment related issues (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.2 - 2011-12-31
- improved PDF export and install script (Thorsten)
- updated Finnish translation (Petteri Hirvonen, Niklas Lampén)
- updated French translation (Cédric Frayssinet)
- updated Chinese (Simplified) translation
- updated bundled TCPDF library to version 5.9.136 (Thorsten)
- updated bundled jQuery datePicker plugin (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.1 - 2011-10-25
- fixed security issue in bundled ImageManager library (Thorsten)
- added missing translations (Thorsten)
- added configurable encryption type for passwords (Thorsten)
- added support for anonymous login for LDAP servers (Thorsten)
- added table of contents in PDF exports (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.0 - 2011-09-30