@@ -7,6 +7,7 @@ This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.7.6 - 2012-05-
 - updated Dutch translation
+- updated Polish translation
 - updated Russian translation
 - fixed some bugs (Thorsten)
 
